--- a/site/composer.json
+++ b/site/composer.json
@@ -40,7 +40,8 @@
     "oscarotero/env": "^1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "wp-sync-db/wp-sync-db": "dev-master@dev",
-    "wp-sync-db/wp-sync-db-media-files": "dev-master"
+    "wp-sync-db/wp-sync-db-media-files": "dev-master",
+    "wpackagist-plugin/wp-discourse": "^1.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
